fixes on firefox

--- a/web/css/navbar.css
+++ b/web/css/navbar.css
@@ -18,7 +18,7 @@ header{
 	box-sizing: border-box;
 	ms-box-sizing: border-box;
 	webkit-box-sizing: border-box;
-	moz-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 .navbar-inner{
 	background-color:#FB786B;
