--- a/web/css/user-info.css
+++ b/web/css/user-info.css
@@ -36,7 +36,7 @@ a:hover{
 	box-sizing: border-box;
 	ms-box-sizing: border-box;
 	webkit-box-sizing: border-box;
-	moz-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	width: 100%;
 	padding: 5px;
 	margin-bottom: 18px
@@ -50,7 +50,7 @@ a:hover{
 	box-sizing: border-box;
 	ms-box-sizing: border-box;
 	webkit-box-sizing: border-box;
-	moz-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 #info-header > .flat-header h3{
@@ -156,7 +156,7 @@ a:hover{
 	box-sizing: border-box;
 	ms-box-sizing: border-box;
 	webkit-box-sizing: border-box;
-	moz-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	padding-top: 7px;
 }
 
@@ -225,7 +225,7 @@ a:hover{
 	box-sizing: border-box;
 	ms-box-sizing: border-box;
 	webkit-box-sizing: border-box;
-	moz-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	width: 100%;
 	padding: 5px;
 	margin-bottom: 8px
@@ -255,7 +255,7 @@ a:hover{
 	box-sizing: border-box;
 	ms-box-sizing: border-box;
 	webkit-box-sizing: border-box;
-	moz-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	padding: 18px 20px;
 	margin: 10px auto;
 	color: #5e6d82;
